@@ -100,6 +100,9 @@ Zope Changes
 
     Bugs fixed
 
+     - Stop testrunner.py from recursing into the 'build-base' directory
+       created by setup.py.
+
      - Collector #1074: Change Scripts' __name__ to None
 
      - Range searches with KeywordIndexes did not work with record-style
